data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2128.wast
;; 9. **Incorrect Context Extension Handling**:    - **Test Description**: Engineer a loop where context extensions (new label types) are mishandled, causing erroneous interpretations of label indices resulting in unbreakable loop scenarios.    - **Constraint**: Properly managing context extensions to prevent infinite loops due to misinterpreted labels.    - **Relation to Infinite Loops**: Mismanaged context can misdirect control flow causing loops never to exit.

(assert_invalid
  (module (func $incorrect-context-extension (result i32)
    (block (result i32) 
      (block (result i32)
        (loop (result i32)
          (br 1 (i32.const 1))
        )
        (br 0)
      )
    )
  ))
  "type mismatch"
)